--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+.gitignore
+.vscode/*
 .pio
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
-.vscode/*
+*~
